syntax = "proto3";
import "gcontrol.proto";
import "gconf_control.proto";
package galois.gservice.demo;
option cc_generic_services = true;

message demo_request {
    gcontrol.control_t ctrl = 1;
    string name = 2;
};

message demo_response {
    string name = 1;
    int32 len = 2;
};

service demo_service 
{
    rpc get_length(demo_request) returns (demo_response);
    rpc gconf(gconf_ctrl_request) returns (gconf_ctrl_response);
};